# qrmfold

./: .gitignore  LICENSE  README.md  environment.yml  getting_started.ipynb  pyproject.toml
.github/workflows/: docs.yml  publish-pypi.yml
demo_notebooks/: tutorial.ipynb
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
qrmfold/: __init__.py  _automorphism.py  _depth_reducer.py  _utils.py  depth_reducer.py  logical_index_to_subset_maps.py  logical_qubit_orderings.py  quantum_reed_muller.py  utils.py
tests/: conftest.py  test_QuantumReedMuller_integration.py  test_QuantumReedMuller_unit.py  test_all_bitstrings.py  test_quantum_reed_muller_integration.py  test_quantum_reed_muller_unit.py  test_utils.py
