[project]
name = "qrmfold"
version = "0.6.0"
description = "A Python package to generate fold-transversal gates in the quantum Reed-Muller code."
authors = [{name="Tim Chan", email="timwlc@icloud.com"}]
dependencies = [
    "ipykernel",
    "ipywidgets",
    "pytest",
    "stim",
]
requires-python = ">=3.13"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"