[project]
name = "qrmfold"
version = "0.6.4"
description = "A Python package to generate fold-transversal gates in the quantum Reed-Muller code."
authors = [{name="Tim Chan", email="timwlc@icloud.com"}]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy",
    "stim",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "ipykernel",
    "ipywidgets",
    "pytest",
    "twine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qrmfold"]