[project]
name = "qrmfold"
version = "0.8.0"
description = "A Python package to construct addressable gates for self-dual quantum Reed-Muller codes as a sequence of transversal and fold-transversal gates."
authors = [{name="Tim Chan", email="timwlc@icloud.com"}]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy",
    "stim",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "ipykernel",
    "ipywidgets",
    "pytest",
    "twine",
]

docs = [
    "sphinx>=7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qrmfold"]